[package]
name = "social-media-search"
version = "0.1.0"
authors = ["Albert Tugushev <albert@tugushev.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
reqwest = {version = "0.10.4", features = ["blocking", "json", "gzip"]}
chrono = "0.4.11"
serde_json = "1.0.52"